# learning-effect

./: .gitignore  README.md  dune-project  learning-effect.opam
.github/workflow/: build.yml
notes/: Makefile  notes.tex  papers.bib
src/: GRU.ml  ML.ml  Makefile  WAV.ml  dune  learn.ml  leffect  leffect.ml  net.ml  output.ml
